Make hero name updateable.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!--Calls on the app controller (app.component modules)-->
   <app-root></app-root>
 </body>
 </html>
